--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "/Users/will/anaconda3/envs/misc/bin/python"
+    "python.pythonPath": "/Users/will/anaconda3/envs/misc/bin/python",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
